# metadata-model

./: .appveyor.yml  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  codecov.yml  requirements-devel.txt  requirements.txt  setup.cfg  setup.py  try_it.py  versioneer.py
.github/workflows/: codeql-analysis.yml  nosetests.yml  python-publish-dry-run.yml  runtests.yml
dataladmetadatamodel/: __init__.py  _version.py  common.py  connector.py  connectordict.py  connectorlist.py  datasettree.py  filetree.py  log.py  mappableobject.py  metadata.py  metadatapath.py  metadatarootrecord.py  metadatasource.py  modifiableobject.py  mtreenode.py  mtreeproxy.py  text.py  treenode.py  uuidset.py  version.py  versionlist.py
dataladmetadatamodel/mapper/: __init__.py  basemapper.py  mapper.py  memorymapper.py  reference.py  xxx.py
dataladmetadatamodel/tests/: test_common.py  test_datasettree.py  test_filetree.py  test_instanceset.py  test_mappableobject.py  test_metadatapath.py  test_metadatasource.py  test_modifiableobject.py  test_mtreenode.py  test_remote.py  test_tree_node.py  test_treenode.py  test_uuidset.py  test_versionlist.py  utils.py
model/: connector.py  connectordict.py  connectorlist.py  datasettree.py  filetree.py  metadatarootrecord.py  text.py  treenode.py  uuidset.py  versionlist.py
model/mapper/: __init__.py  basemapper.py  reference.py
model/tests/: test_tree_node.py
simple_test/: persisted_object.py
tools/metadata_creator/: create.py  datasettreecreator.py  execute.py  filetreecreator.py  main.py  mimic.py  mirror.py  mrrcreator.py  utils.py  (+2 more)
(+45 files in other folders)
