[metadata]
name = datalad-metadata-model
version = 0.3.0
url = https://github.com/datalad/datalad-metadata-model
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = Metadata model used in DataLad's extension for semantic metadata handling
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
install_requires =
    appdirs
    click
    dataclasses
    fasteners
test_requires =
    nose
    coverage
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = dataladmetadatamodel/_version.py
versionfile_build = dataladmetadatamodel/_version.py
tag_prefix =
parentdir_prefix =
